--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ input[type="checkbox"] {
 	display: none;
 }
 
-.todoapp {
+.itemapp {
 	background: #fff;
 	margin: 130px 0 40px 0;
 	position: relative;
@@ -50,25 +50,25 @@ input[type="checkbox"] {
 	            0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
-.todoapp input::-webkit-input-placeholder {
+.itemapp input::-webkit-input-placeholder {
 	font-style: italic;
 	font-weight: 300;
 	color: #e6e6e6;
 }
 
-.todoapp input::-moz-placeholder {
+.itemapp input::-moz-placeholder {
 	font-style: italic;
 	font-weight: 300;
 	color: #e6e6e6;
 }
 
-.todoapp input::input-placeholder {
+.itemapp input::input-placeholder {
 	font-style: italic;
 	font-weight: 300;
 	color: #e6e6e6;
 }
 
-.todoapp h1 {
+.itemapp h1 {
 	position: absolute;
 	top: -155px;
 	width: 100%;
@@ -81,7 +81,7 @@ input[type="checkbox"] {
 	text-rendering: optimizeLegibility;
 }
 
-.new-todo,
+.new-item,
 .edit {
 	position: relative;
 	margin: 0;
@@ -101,7 +101,7 @@ input[type="checkbox"] {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.new-todo {
+.new-item {
 	padding: 16px 16px 16px 0px;
 	margin-left: 60px;
 	border: none;
@@ -141,39 +141,39 @@ label[for='toggle-all'] {
 	color: #737373;
 }
 
-.todo-list {
+.item-list {
 	margin: 0;
 	padding: 0;
 	list-style: none;
 }
 
-.todo-list li {
+.item-list li {
 	position: relative;
 	font-size: 24px;
 	border-bottom: 1px solid #ededed;
 }
 
-.todo-list li:last-child {
+.item-list li:last-child {
 	border-bottom: none;
 }
 
-.todo-list li.editing {
+.item-list li.editing {
 	border-bottom: none;
 	padding: 0;
 }
 
-.todo-list li.editing .edit {
+.item-list li.editing .edit {
 	display: block;
 	width: 506px;
 	padding: 13px 17px 12px 17px;
 	margin: 0 0 0 43px;
 }
 
-.todo-list li.editing .view {
+.item-list li.editing .view {
 	display: none;
 }
 
-.todo-list li .toggle {
+.item-list li .toggle {
 	text-align: center;
 	width: 40px;
 	/* auto, since non-WebKit browsers doesn't support input styling */
@@ -187,15 +187,15 @@ label[for='toggle-all'] {
 	appearance: none;
 }
 
-.todo-list li .toggle:after {
+.item-list li .toggle:after {
 	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#ededed" stroke-width="3"/></svg>');
 }
 
-.todo-list li .toggle:checked:after {
+.item-list li .toggle:checked:after {
 	content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>');
 }
 
-.todo-list li label {
+.item-list li label {
 	white-space: pre-line;
 	word-break: break-all;
 	padding: 15px 60px 15px 15px;
@@ -205,12 +205,12 @@ label[for='toggle-all'] {
 	transition: color 0.4s;
 }
 
-.todo-list li.completed label {
+.item-list li.completed label {
 	color: #d9d9d9;
 	text-decoration: line-through;
 }
 
-.todo-list li .destroy {
+.item-list li .destroy {
 	display: none;
 	position: absolute;
 	top: 0;
@@ -226,23 +226,23 @@ label[for='toggle-all'] {
 	cursor: pointer;
 }
 
-.todo-list li .destroy:hover {
+.item-list li .destroy:hover {
 	color: #af5b5e;
 }
 
-.todo-list li .destroy:after {
+.item-list li .destroy:after {
 	content: '×';
 }
 
-.todo-list li:hover .destroy {
+.item-list li:hover .destroy {
 	display: block;
 }
 
-.todo-list li .edit {
+.item-list li .edit {
 	display: none;
 }
 
-.todo-list li.editing:last-child {
+.item-list li.editing:last-child {
 	margin-bottom: -1px;
 }
 
@@ -269,12 +269,12 @@ label[for='toggle-all'] {
 	            0 17px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
-.todo-count {
+.item-count {
 	float: left;
 	text-align: left;
 }
 
-.todo-count strong {
+.item-count strong {
 	font-weight: 300;
 }
 
@@ -315,11 +315,11 @@ label[for='toggle-all'] {
 */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 	.toggle-all,
-	.todo-list li .toggle {
+	.item-list li .toggle {
 		background: none;
 	}
 
-	.todo-list li .toggle {
+	.item-list li .toggle {
 		height: 40px;
 		cursor: pointer;
 	}
